<resources>
    <string name="app_name">Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="movie_app_button_label">Popular Movies</string>
    <string name="alexandria_app_button_label">Alexandria</string>
    <string name="scores_app_button_label">Football Scores</string>
    <string name="build_it_bigger_app_button_label">Build It Bigger</string>
    <string name="xyz_reader_app_button_label">XYZ Reader</string>
    <string name="capstone_app_button_label">Capstone: my own app</string>
    <string name="title_label">My Nanodegree Apps!</string>
</resources>
