<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_label"
        android:text="@string/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/movie_app_button"
        android:text="@string/movie_app_button_label"
        style="@style/app_button_style"/>

    <Button
        android:id="@+id/alexandria_app_button"
        android:text="@string/alexandria_app_button_label"
        style="@style/app_button_style"/>

    <Button
        android:id="@+id/scores_app_button"
        android:text="@string/scores_app_button_label"
        style="@style/app_button_style"/>

    <Button
        android:id="@+id/build_it_bigger_app_button"
        android:text="@string/build_it_bigger_app_button_label"
        style="@style/app_button_style"/>

    <Button
        android:id="@+id/xyz_reader_app_button"
        android:text="@string/xyz_reader_app_button_label"
        style="@style/app_button_style"/>

    <Button
        android:id="@+id/capstone_app_button"
        android:text="@string/capstone_app_button_label"
        style="@style/app_button_style"/>

</LinearLayout>
